# bioinfocutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: Makefile  README.md  environment.yaml  pyproject.toml  setup.py  test_environment.py
